--- a/index.html
+++ b/index.html
@@ -58,6 +58,53 @@
           <p>Your browser doesn't support HTML5 video. Here is a <a href="rabbit320.webm">link to the video</a> instead.</p>
         </video>
 
+        <p>Incorporando um video do Youtube:</p>
+
+        <iframe width="560" height="315" 
+          src="https://www.youtube.com/embed/4ActsyvnxfA" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+        </iframe>
+
+        <p>Incorporando um mapa do Google Maps:</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3580.4102656472473!2d-50.36920528566716!3d-26.183329169482388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e712bd8cf83b25%3A0xcbfe52ab491b27e7!2sIFSC%20C%C3%A2mpus%20Canoinhas!5e0!3m2!1spt-BR!2sbr!4v1623278978498!5m2!1spt-BR!2sbr"
+         width="600" height="450" style="border:0;" 
+         allowfullscreen="" loading="lazy">
+        </iframe>
+
+        <p>Incorporando um documento PDF:</p>
+
+        <object data="pdfs/aula-4.pdf" type="application/pdf"
+          width="800" height="1200" typemustmatch>
+          <p>You don't have a PDF plugin, but you can
+            <a href="pdfs/aula-4.pdf">download the PDF file.</a>
+          </p>
+        </object>
+
+        <p>Incorporando vetores gráficos SVG</p>
+        
+        <svg width="300" height="200">
+          <rect width="100%" height="100%" fill="black" />
+          <circle cx="150" cy="100" r="90" fill="blue" />
+        </svg>
+
+        <svg width="100%">
+          <rect width="100%" height="100%" fill="red" />
+          <circle cx="100%" cy="100%" r="150" fill="blue" stroke="black" />
+          <polygon points="120,0 240,225 0,225" fill="green"/>
+          <text x="50" y="100" font-family="Verdana" font-size="55"
+                fill="white" stroke="black" stroke-width="2">
+                  Hello!
+          </text>
+        </svg>
+
+
+
+
+        
       </article>
 
       <aside>
