--- a/css.html
+++ b/css.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Programação para Internet I</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <style>
       .container{
         width: 300px; 
@@ -195,20 +195,41 @@
         <p>A propriedade <code>float</code> também pode ser utilizada para organizar elementos em bloco:</p>
 
         <div class="container">
-          <div style="float: left; background: red; ">Div 1</div>
-          <div style="float: left; background: blue;">Div 2</div>
-          <div style="float: left; background: green;">Div 3</div>
+          <div style="float: left; width:70px; height:50px; background: red; ">Div 1</div>
+          <div style="float: left; width:70px; height:50px; background: blue;">Div 2</div>
+          <div style="float: left; width:70px; height:50px; background: green;">Div 3</div>
         </div>
 
         <p>A propriedade <code>clear</code> controla em que condições outros elementos podem flutuar ao redor dele. Só funciona
            em relação a elementos que aparecem antes no documento HTML.
         </p>
         <div class="container">
-          <div style="float: left; background: red;">Div 1</div>
-          <div style="float: left; clear: none; background: green;">
-            Div 2
-          </div>
+          <div style="float: left; clear: none; width:70px; height:50px; background: red;">Div 1</div>
+          <div style="float: left; clear: none; width:70px; height:50px; background: blue;">Div 2</div>
+          <div style="float: left; clear: none; width:70px; height:50px; background: green;">Div 3</div>
         </div>
+
+        <h3>Posicionamento com <code>display:inline-block</code></h3>
+
+        <p>O valor <code>inline-block</code> da propriedade <code>display</code> também pode ser utilizado
+          para arranjar elementos lado a lado:
+        </p>
+        <div class="container">
+          <div style="display: inline-block; width:70px; height:50px; background: red;">Div 1</div>
+          <div style="display: inline-block; width:70px; height:50px; background: blue;">Div 2</div>
+          <div style="display: inline-block; width:70px; height:50px; background: green;">Div 3</div>
+        </div>
+
+
+        <h3>Propriedade <code>box-sizing</code></h3>
+
+        <p>As divs abaixo possuem as mesmas dimensões, apenas tamanhos de bordas diferentes. 
+           Para alterar a forma de definir o tamanho, pode ser utilizado <code>box-sizing:border-box</code>.
+        </p>
+
+        <div class="container-pequeno" style="box-sizing: content-box;border: 10px solid blue;"> </div>
+        <div class="container-pequeno" style="box-sizing: content-box;"></div>
+
 
       </article>
 
